Streampline parameter processing